wip: stub out database implementation
