# pkg/api/images.go
@@ -1,18 +1,0 @@
-package api
-
-import (
-	"net/http"
-
-)
-
-func (s *Server) GetImages(w http.ResponseWriter, r *http.Request, params GetImagesParams) {
-}
-
-func (s *Server) GetImage(w http.ResponseWriter, r *http.Request, id Id) {
-}
-
-func (s *Server) PutImage(w http.ResponseWriter, r *http.Request, id Id) {
-}
-
-func (s *Server) DeleteImage(w http.ResponseWriter, r *http.Request, id Id) {
-}
